menu overlappin with search input fixed

--- a/src/style.css
+++ b/src/style.css
@@ -16,11 +16,11 @@
   --black: #000000;
   --white: #ffffff;
   --grey: #444444;
-  --dark-grey:	#202020;
+  --dark-grey: #202020;
   --rubber-red: #d03d70;
   --rubber-red-light: #ff579e;
   --rubber-red-dark: #9c0045;
-  --pink-dark:rgba(223, 70, 159, 0.7);
+  --pink-dark: rgba(223, 70, 159, 0.7);
   --keppel-green: rgb(50, 191, 170);
   --keppel-green-light: #6ff2dc;
   --keppel-green-dark: #008e7b;
@@ -131,8 +131,6 @@ h1 {
   margin-left: 60px;
 }
 
-
-
 #main-submit {
   background-color: var(--rubber-red-dark);
   color: var(--white);
@@ -185,8 +183,8 @@ input {
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: right;
-  padding-top: 1vh;
+  justify-content: center;
+  padding: 3rem 2rem 3rem 2rem;
   margin-bottom: 8vh;
   z-index: 2;
 }
@@ -196,9 +194,9 @@ input {
   padding: 0.8vh;
   padding-left: 3vw;
   border-radius: 20px;
-  margin: 2vh 6vh 2vh 0;
   font-family: var(--app-body-font);
   font-size: 16px;
+  margin: unset;
 }
 
 .search input:focus {
@@ -331,7 +329,7 @@ a {
   width: 80%;
   font-family: var(--app-body-font);
   font-size: 16px;
-  }
+}
 
 .edit_move_input:focus {
   outline: 2px solid var(--keppel-green-light);
@@ -355,30 +353,28 @@ a {
 
 .labels {
   font-size: 16px;
-  color:var(--black);
+  color: var(--black);
   align-self: baseline;
   margin-left: 41px;
 }
 
-.notes_field{
+.notes_field {
   height: 60px;
 }
-.link_field{
+.link_field {
   height: 76px;
 }
-
-
 
 /* == NEW MOVE == */
 
 .addmove {
   height: 100vh;
-   background: linear-gradient(
+  background: linear-gradient(
     to bottom,
     var(--pink-dark) 0%,
     var(--white) 100%
   );
- }
+}
 
 .addMoveHeader {
   font-family: var(--app-name-font);
@@ -391,7 +387,7 @@ a {
   padding: 3rem 2rem 2rem 2rem;
 }
 
-.addMoveForm{
+.addMoveForm {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -422,7 +418,7 @@ a {
   font-size: 18px;
   cursor: pointer;
   padding: 0.8vh;
- }
+}
 
 /* == FOOTER == */
 
@@ -453,7 +449,6 @@ a {
   top: 23px;
   left: 15px;
   z-index: 10;
-  width: 180px;
   height: auto;
 }
 
@@ -467,6 +462,7 @@ a {
 
 .icons-wrapper {
   padding: 10px;
+  width: 180px;
 }
 
 p {
